--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "requests>=2.32.2",
     "tabulate>=0.9.0",
     "python-dotenv>=1.0.1",
+    "termcolor>=2.4.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
